--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-flask
-numpy
-pandas
-scikit-learn
-joblib
-mlflow
+flask==3.1.2
+numpy==1.26.4
+pandas==2.2.2
+scikit-learn==1.3.2
+joblib==1.5.2
+mlflow==3.7.0
